[CSS Parser] Fix named color parsing https://bugs.webkit.org/show_bug.cgi?id=163662

Reviewed by Zalan Bujtas.

Named color parsing in the old parser for extended colors relied on constructing a Color with the
name and doing a lookup that way.

The new parser allows the back end to hold a primitive identifier value for extended colors.

StyleColor contains a helper function for looking up the correct color.

This patch switches both the old and the new parsers over to the new StyleColor function.

Also remove some asserts from the CSSSelectorList, since the new parser allows it to be empty and
detects parsing failure that way.

* css/CSSSelectorList.cpp:
(WebCore::CSSSelectorList::CSSSelectorList):
(WebCore::CSSSelectorList::operator=):
* css/StyleColor.cpp:
(WebCore::StyleColor::isColorKeyword):
* css/StyleResolver.cpp:
(WebCore::StyleResolver::colorFromPrimitiveValue):
(WebCore::colorForCSSValue): Deleted.



Canonical link: https://commits.webkit.org/181449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207539 268f45cc-cd09-0410-ab3c-d52691b4dbfc